--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Power Reds | Red Cross Blood Services</title>
     <link rel="icon" href="red-cross.png" />
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -22,15 +22,15 @@
     ></script>
 
     <!-- Chat Box -->
-    <div class="chat-box d-flex justify-content-center align-items-center fixed-bottom mb-4 me-4">
-      <img src="woman.png" alt="" class="w-75 h-75" />
-      <div class="text-center">
-        <p class="mb-0 font-weight-normal">Chat with me!</p>
+    <div class="chat-box">
+      <img src="woman.png" alt="" />
+      <div>
+        <p>Chat with me!</p>
       </div>
     </div>
 
     <!-- Header Section -->
-    <div class="header-1 d-flex justify-content-between align-items-center py-2 px-4">
+    <div class="header-1">
       <!-- Navigation and Icons -->
       <span class="glass">&#x1F50E;&#xFE0E;</span>
       <span>&#8226;</span>
@@ -45,48 +45,50 @@
     </div>
 
     <!-- Header Section 2 -->
-    <div class="header-2 d-flex justify-content-between align-items-center py-3 px-4">
+    <div class="header-2">
       <!-- Red Cross Logo and Navigation -->
-      <img
-        class="red-cross-logo"
-        src="https://www.redcrossblood.org/content/dam/redcrossblood/images/arc-biomed-logo.png.img.png"
-        alt="logo"
-      />
-      <div class="d-flex align-items-center">
-        <span class="donate-nav me-4">Donate Blood</span>
-        <span class="me-4">Hosting a Blood Drive</span>
-        <span class="me-4">Biomedical Services</span>
-        <div class="red-box d-flex flex-column align-items-center py-3 px-4">
-          <div>
-            <h3 class="find mb-0">Find a Blood Drive</h3>
-          </div>
-          <div class="input-text-div position-relative">
-            <input class="input form-control" type="text" placeholder="20006" />
-            <button class="btn btn-primary position-absolute end-0 h-100">
-              >
-            </button>
+      <div class="row align-items-center">
+        <div class="col-md-4">
+          <img
+            class="red-cross-logo"
+            src="https://www.redcrossblood.org/content/dam/redcrossblood/images/arc-biomed-logo.png.img.png"
+            alt="logo"
+          />
+        </div>
+        <div class="col-md-8 d-flex justify-content-around">
+          <span class="donate-nav">Donate Blood</span>
+          <span>Hosting a Blood Drive</span>
+          <span>Biomedical Services</span>
+          <div class="red-box">
+            <div>
+              <h3 class="find">Find a Blood Drive</h3>
+            </div>
+            <div class="input-text-div">
+              <input class="input" type="text" placeholder="20006" />
+              <button>></button>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Header Section 3 -->
-    <div class="header-3 d-flex justify-content-between align-items-center py-3 px-4">
+    <div class="header-3">
       <!-- Breadcrumbs and Social Media Icons -->
-      <span class="home">
-        Home > Types of Blood Donations <br />
+      <span class="home"
+        >Home > Types of Blood Donations > <br />
         <h2>Power Red Donation</h2>
       </span>
-      <div class="d-flex align-items-center">
-        <img class="socialmedia-icon-mail me-3" src="mail.png" alt="" />
-        <img class="socialmedia-icon me-3" src="facebook.png" alt="" />
-        <img class="socialmedia-icon me-3" src="twitter.png" alt="" />
-        <img class="socialmedia-icon me-3" src="more.png" alt="" />
+      <div class="ms-auto">
+        <img class="socialmedia-icon-mail" src="mail.png" alt="" />
+        <img class="socialmedia-icon" src="facebook.png" alt="" />
+        <img class="socialmedia-icon" src="twitter.png" alt="" />
+        <img class="socialmedia-icon" src="more.png" alt="" />
       </div>
     </div>
 
     <!-- Main Body Content -->
-    <div class="body container-fluid my-5">
+    <div class="body">
       <!-- Main Heading -->
       <div class="main-heading">
         <h1>Power Red Donation</h1>
@@ -99,28 +101,30 @@
       </div>
 
       <!-- Video Section -->
-      <div class="row justify-content-center mt-5">
-        <div class="col-md-8">
-          <div class="video p-4 shadow">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <div class="video">
             <h1>What is a Power Red Donation?</h1>
             <p>
               Power Red is similar to a whole blood donation, except a special
-              machine is used to allow you to safely donate two units of red
-              blood cells during one donation while returning your plasma and
-              platelets to you.
+              <br />machine is used to allow you to safely donate two units of red
+              blood <br />cells during one donation while returning your plasma and
+              platelets to
+              <br />
+              you.
             </p>
             <p>Maximize your impact and schedule a Power Red donation today!</p>
-            <div class="grey-box d-flex align-items-center">
+            <div class="grey-box">
               <span><strong>Give Power Red</strong></span>
-              <input type="text" class="form-control mx-3" placeholder="Zip Code" />
-              <button class="btn btn-danger"><strong>SCHEDULE NOW</strong></button>
+              <input type="text" placeholder="Zip Code" />
+              <button><strong>SCHEDULE NOW</strong></button>
             </div>
           </div>
         </div>
       </div>
 
       <!-- Main Heading 2 -->
-      <div class="main-heading-2 mt-5">
+      <div class="main-heading-2">
         <h1 class="main-heading-2-h1">The Benefits</h1>
         <!-- List of Benefits -->
         <ul class="list">
@@ -130,17 +134,17 @@
             donations. Whole blood donations contain red blood cells, platelets,
             plasma and white blood cells. Red blood cells are the most
             frequently used blood component and are needed by almost every type
-            of patients requiring <a href="#" class="hyperlink">transfusion.</a>
-            If you meet certain criteria, Power Red allows you to safely donate
-            two units of red cells during one appointment as an automated
-            donation process. It is as safe as whole blood donation.
+            of patients requiring <a href="#" class="hyperlink">transfusion.</a> If
+            you meet certain criteria, Power Red allows you to safely donate two
+            units of red cells during one appointment as an automated donation
+            process. It is as safe as whole blood donation
           </li>
           <li>
             <strong>How is it different?</strong> During your Power Red, blood
             is drawn from one arm through an automated process. The machine
             separates and collects two units of red cells and then safely
             returns the remaining
-            <a href="#" class="hyperlink">blood components</a>, along with some
+            <a href="#" class="hyperlink">blood components,</a> along with some
             saline, back to you through the same arm.
           </li>
           <li>
@@ -162,7 +166,7 @@
       </div>
 
       <!-- Main Heading 3 -->
-      <div class="main-heading-3 mt-5">
+      <div class="main-heading-3">
         <h1>Am I Eligible to Donate?</h1>
         <p>
           In addition to meeting other whole blood donor qualifications, you
@@ -188,7 +192,7 @@
       <p class="view">View all eligibility requirements »</p>
 
       <!-- Main Heading 4 -->
-      <div class="main-heading-4 mt-5">
+      <div class="main-heading-4">
         <h1>Ready to Donate?</h1>
         <div class="sub-text">
           Three easy ways to schedule a Power Red appointment today.
@@ -196,43 +200,43 @@
       </div>
 
       <!-- Bottom Boxes -->
-      <div class="bottom-boxes row justify-content-center mt-4">
+      <div class="bottom-boxes row">
         <!-- Box 1 -->
-        <div class="box-1 col-md-4 shadow p-0">
-          <div class="title d-flex align-items-center">
-            <img src="pin.png" alt="" class="ms-3" />
-            <h2 class="ms-3">Schedule Online</h2>
+        <div class="box-1 col-md-4">
+          <div class="title">
+            <img src="pin.png" alt="" />
+            <h2>Schedule Online</h2>
           </div>
-          <div class="button-div d-flex justify-content-center align-items-center py-4">
-            <button class="btn btn-danger"><strong>MAKE AN APPOINTMENT</strong></button>
+          <div class="button-div">
+            <button><strong>MAKE AN APPOINTMENT</strong></button>
           </div>
         </div>
         <!-- Box 2 -->
-        <div class="box-2 col-md-4 shadow p-0 m-4 m-md-0">
-          <div class="title d-flex align-items-center">
-            <img src="phone-call.png" alt="" class="ms-3" />
-            <h2 class="ms-3">Call Us</h2>
+        <div class="box-2 col-md-4">
+          <div class="title">
+            <img src="phone-call.png" alt="" />
+            <h2>Call Us</h2>
           </div>
-          <div class="button-div d-flex justify-content-center align-items-center py-4">
-            <button class="btn btn-danger"><strong>1-800-RED CROSS</strong></button>
+          <div class="button-div">
+            <button><strong>1-800-RED CROSS</strong></button>
           </div>
         </div>
         <!-- Box 3 -->
-        <div class="box-3 col-md-4 shadow p-0">
-          <div class="title d-flex align-items-center">
-            <img src="smartphone.png" alt="" class="ms-3" />
-            <h2 class="ms-3">Use Mobile App</h2>
+        <div class="box-3 col-md-4">
+          <div class="title">
+            <img src="smartphone.png" alt="" />
+            <h2>Use Mobile App</h2>
           </div>
-          <div class="button-div d-flex justify-content-center align-items-center py-4">
-            <button class="btn btn-danger"><strong>DOWNLOAD BLOOD DONOR APP</strong></button>
+          <div class="button-div">
+            <button><strong>DOWNLOAD BLOOD DONOR APP</strong></button>
           </div>
         </div>
       </div>
 
       <!-- Disclaimers Section -->
-      <div class="disclaimers-background d-flex justify-content-center align-items-center py-5">
-        <div class="disclaimers-box d-flex justify-content-between align-items-center p-3">
-          <h2 class="mb-0">*Disclaimers</h2>
+      <div class="disclaimers-background">
+        <div class="disclaimers-box">
+          <h2>*Disclaimers</h2>
           <!-- Plus Icon -->
           <div class="plus-div">
             <img class="plus" src="plus.png" alt="" />
@@ -244,8 +248,8 @@
     </div>
 
     <!-- Footer Section -->
-    <div class="footer py-3">
-      <div class="footer-text-div d-flex align-items-center justify-content-center">
+    <div class="footer">
+      <div class="footer-text-div">
         <span>©</span>
         <span>2024 The American National Red Cross</span>
         <span>&#8226;</span>
@@ -266,16 +270,16 @@
         <span>News</span>
       </div>
       <!-- Footer Social Media Icons -->
-      <div class="footer-socialmedia-icons d-flex align-items-center justify-content-center mt-3">
-        <div class="border me-3"></div>
+      <div class="footer-socialmedia-icons">
+        <div class="border"></div>
         <img src="facebook2.png" alt="" />
-        <div class="border mx-3"></div>
+        <div class="border"></div>
         <img src="twitter2.png" alt="" />
-        <div class="border mx-3"></div>
+        <div class="border"></div>
         <img src="instagram2.png" alt="" />
-        <div class="border mx-3"></div>
+        <div class="border"></div>
         <img src="tiktok2.png" alt="" />
-        <div class="border ms-3"></div>
+        <div class="border"></div>
       </div>
     </div>
   </body>
